<resources>
    <string name="app_name">Quiz app</string>
    <string name="action_settings">Settings</string>

    <string name="btbPlus">PLUS</string>
    <string name="btn_play">PLAY!</string>
    <string name="btn_database">DATABASE</string>
    <string name="btnAdd">ADD</string>
    <string name="enter_photo_name">Enter photo name</string>
    <string name="btnSave">SAVE</string>
    <string name="guess_the_name">Guess the country…</string>
    <string name="checkButton">Check</string>
    <string name="overall_score">Overall score</string>
    <string name="pic_to_guess">pic to guess</string>
    <string name="pic_to_save">pic to save</string>
    <string name="pic_database">pic_database</string>
    <string name="name_database">NAME</string>
    <string name="btn_send">BTN_SEND</string>
    <string name="send_items">Send items</string>
</resources>